fixed load more button on email app and fixed toasters not showing

--- a/app/sass/includes/toast.scss
+++ b/app/sass/includes/toast.scss
@@ -1,4 +1,4 @@
-.toasts-container {
+/*.toasts-container {
     min-height: 200px;
     position: fixed;
     min-height: 200px;
@@ -12,4 +12,4 @@
         top: 0;
         right: 0;
     }
-}
+}*/
